@@ -47,8 +47,26 @@
         <configuration>
           <useModulePath>true</useModulePath>
           <argLine>--enable-preview  --add-modules=jdk.incubator.vector</argLine>
-<!--          <forkCount>0</forkCount>-->
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>3.4.0</version>
+        <configuration>
+          <useModulePath>true</useModulePath>
+          <argLine>--enable-preview  --add-modules=jdk.incubator.vector</argLine>
+        </configuration>
+
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+
       </plugin>
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
